syntax = "proto3";

option csharp_namespace = "Broker.Grpc";

service BrokerReceiver {
  rpc StreamMessages(stream MessageRequest) returns (stream R);
}


message MessageRequest {
  string key = 1;
  string value = 2;
  map<string, string> headers = 3;
  int32 priority = 4;
  map<string, string> context = 5; 
  string topic = 6;
}

message Response {
  bool success = 1;
  string message = 2;   
  string data	 = 3; 
}
